# ai-ethics-diagnoser-agent

./: .gitignore  README.md  State_Definition.xlsx  package-lock.json  pyproject.toml  프롬프트 1 문제가 있어서 개선안이 도출되었을 때.txt  프롬프트 2 문제가 없을 때.txt
agents/: __init__.py  common_ethics_diagnoser.py  ethics_risk_diagnoser_chatbot.py  ethics_risk_diagnoser_general.py  ethics_risk_diagnoser_imagegen.py  ethics_risk_diagnoser_recsys.py  improvement_suggester.py  report_generator.py  report_type_decider.py  risk_classifier.py  service_analyzer.py  specific_risk_diagnosis_router.py
app/main/: fastapi_app.py
app/services/: diagnosis_service.py
core/: __init__.py  config.py  db_manager.py  db_utils.py  graph.py  states.py  tools.py
db/: chroma_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  theme.ts
frontend/src/api/: diagnosis.ts
frontend/src/components/: DiagnosisCard.tsx  DiagnosisForm.tsx  LogViewer.tsx  MainLayout.tsx
frontend/src/utils/: api.ts
prompts/: analyzer_prompts.py  common_diagnoser_prompts.py  decider_prompts.py  report_generator_prompts.py  suggester_prompts.py
